[package]
name = "imagenav"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked-list = "0.0.3"
raw_tty = "0.1.0"
terminal-keycode = "1.1.1"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image", "gfx"]
