[package]
name = "imagenav"
version = "0.2.1"
edition = "2021"

[dependencies]
linked-list = "0.0.3"
raw_tty = "0.1.0"
terminal-keycode = "1.1.1"
rayon = "1.7.0"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image"]

[profile.release]
debug = false
strip = "symbols"

# [package.metadata.vcpkg]
# dependencies = ["sdl2-image", "sdl2-gfx"]
# git = "https://github.com/microsoft/vcpkg"
# rev = "2023.02.24"
